frontend/web/src/styles.css
@import 'tailwindcss';

@font-face {
  font-family: Geist Mono;
  src: url('./assets/fonts/geist_mono/GeistMono-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: Geist Mono;
  src: url('./assets/fonts/geist_mono/GeistMono-Medium.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: Geist Mono;
  src: url('./assets/fonts/geist_mono/GeistMono-Bold.ttf') format('truetype');
  font-weight: 800;
  font-style: normal;
  font-display: block;
}

:root {
  /* Base Colors */
  --primary: #e6ff2b;
  --secondary: #0b4650;
  --tertiary: #c6ff33;
  --quaternary: #fe7f2d;
  --transparent: transparent;

  /* State Colors */
  --success: #22c55d;
  --warning: #fbbf24;
  --error: #fa2c05;

  /* Dark Palette */
  --dark: #101011;
  --black: #000000;
  --gray1: #2b2b2c;
  --gray2: #606266;
  --mirage: #16232a;
  --dark-card-bg: #233d4d;
  --tertiary-dark: #898a8d;

  /* Light Palette */
  --gray3: #a7a7a7;
  --gray4: #d9d9d9;
  --white: #ffffff;
  --wild-sand: #e4eef0;
  --light-card-bg: #e8d8c9;
  --tertiary-white: #f9f7f2;
  --alternate-white: #f0f2f6;

  /* Semantic Colors */
  --body-background: var(--white);
  --alternate-background: var(--gray3);
  --inverted-background: var(--dark);

  --primary-text: var(--dark);
  --alternate-text: var(--gray1);
  --inverted-text: var(--white);
  --muted-text: var(--gray2);

  /* Font & Styles */
  --box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  --font-family: 'Geist Mono', Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI',
  Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

/* Light/Dark Mode Variables */
@media (prefers-color-scheme: light) {
  :root {
    color-scheme: light;
    --body-background: var(--color-white);
    --alternate-background: var(--alternate-white);
    --inverted-background: var(--dark);
    --primary-text: var(--dark);
    --inverted-text: var(--white);
    --alternate-text: var(--gray1);
    --muted-text: var(--gray2);
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    color-scheme: dark;
    --body-background: var(--dark);
    --alternate-background: var(--gray1);
    --inverted-background: var(--alternate-white);
    --primary-text: var(--white);
    --inverted-text: var(--black);
    --alternate-text: var(--gray4);
    --muted-text: var(--gray2);
  }
}

@theme inline {
  /* Brand */
  --color-primary: var(--primary);
  --color-secondary: var(--secondary);
  --color-tertiary: var(--tertiary);
  --color-quaternary: var(--quaternary);

  /* State */
  --color-success: var(--success);
  --color-warning: var(--warning);
  --color-error: var(--error);
  --color-muted: var(--muted-text);

  /* Raw Palette */
  --color-dark: var(--dark);
  --color-black: var(--black);
  --color-gray1: var(--gray1);
  --color-gray2: var(--gray2);
  --color-gray3: var(--gray3);
  --color-gray4: var(--gray4);
  --color-white: var(--white);

  --color-body-background: var(--body-background);
  --color-alternate-background: var(--alternate-background);
  --color-inverted-background: var(--inverted-background);
  --color-primary-text: var(--primary-text);
  --color-alternate-text: var(--alternate-text);
  --color-inverted-text: var(--inverted-text);
  --color-muted-text: var(--muted-text);
}

/* Body & Layout */
body {
  margin: 0;
  padding: 0;
  width: 100%;
  min-width: 320px;
  min-height: 100vh;
  overflow-x: hidden;
  position: relative;
  box-sizing: var(--box-sizing);
  background-color: var(--body-background);
  font-family: var(--font-family), sans-serif;
}

main {
  width: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  box-sizing: inherit;
  position: relative;
}

@layer base {
  /* HEADER START */
  header {
    @apply w-full bg-primary inset-0 h-[8vh] flex items-center;
  }

  /* HEADER END */
  /* SECTION START */
  section {
    @apply w-full flex flex-col;
  }

  /* SECTION END */
  /* HEADINGS START */
  h1,
  h2 {
    @apply tracking-wider;
    margin: 0;
    font-weight: 600;
    line-height: 100%;
    font-size: 3.125rem;
  }

  h3,
  h4 {
    @apply tracking-wide;
    margin: 0;
    font-weight: 500;
    line-height: 80%;
    font-size: 2rem;
  }

  h5,
  h6 {
    @apply tracking-normal;
    margin: 0;
    font-weight: 500;
    line-height: 60%;
    font-size: 1.5rem;
  }

  /* HEADINGS END */
  p {
    color: var(--color-primary-text);
  }

  hr {
    @apply flex-1 border border-muted;
  }

  form {
    @apply overflow-hidden;

    .input-field {
      @apply flex flex-col gap-2 w-full my-6;

      .input-field-errors-wrapper {
        @apply flex flex-col gap-2;

        .input-field-error {
          @apply text-error text-xs;
        }
      }
    }

    input {
      @apply bg-alternate-background focus:outline-primary rounded-lg border-none focus:border-none focus:outline px-4 py-2;
    }

    button {
      @apply bg-primary text-inverted-text shadow-primary disabled:bg-primary/50 cursor-pointer w-full rounded-lg px-4 py-2 shadow disabled:shadow-none disabled:cursor-not-allowed enabled:hover:scale-101 duration-300 ease-in-out;
    }
  }
}

@layer components {
}

@layer utilities {
  .form-redirect-text {
    @apply mt-2 text-sm text-center w-full underline underline-offset-2 cursor-pointer duration-300 ease-in-out text-muted hover:text-primary;
  }

  .bordered-card {
    @apply text-xs flex flex-row items-start gap-3 border rounded-lg p-6 w-full border-primary;
  }

  /* ANIMATIONS START */
  .animate-left {
    animation: slideLeft 750ms ease-out forwards;
  }

  .animate-right {
    animation: slideRight 750ms ease-out forwards;
  }
  /* ANIMATIONS END */
}

@keyframes slideLeft {
  from {
    transform: translateX(-100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideRight {
  from {
    transform: translateX(100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

